--- a/about.html
+++ b/about.html
@@ -15,37 +15,95 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="assets/about.css">
+    <style>
+        .auth-image {
+            float: left;
+            width: 200px;
+            height: auto;
+            margin-top: 10px;
+            margin-right: 25px;
+        }
+
+        html body {
+            height: 100%;
+            margin: 0;
+            position: absolute;
+        }
+
+        .main-section {
+            margin-left: 20px;
+            margin-right: 20px;
+            height: 60px;
+        }
+
+        footer {
+
+            padding: 30px 0;
+            clear: both;
+            font-size: 12px;
+            color: #fff;
+            color: #ccc;
+            text-align: center;
+            background: #666;
+            border-top: 8px solid #4aaaa5;
+            margin-top: 10px;
+        }
+    </style>
 </head>
 
 <body>
-    <div class="header">
-        <header class="main-header">
-            <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                <a class="navbar-brand" href="#">Shahriar Elias</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
-                    aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                    <div class="navbar-nav">
-                        <a class="nav-item nav-link active" href="#">About<span class="sr-only">(current)</span></a>
-                        <a class="nav-item nav-link active" href="#">Gallery<span class="sr-only">(current)</span></a>
-                        <a class="nav-item nav-link active" href="#">Contact<span class="sr-only">(current)</span></a>
-                    </div>
-                </div>
-            </nav>
-        </header>
-    </div>
-    <div class="main-content">{
-        <div class="jumbotron jumbotron-fluid">
-            <div class="container">
-                <h1 class="display-4">Fluid jumbotron</h1>
-                <p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.
-                </p>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">Shahriar Elias</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="#">About <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="gallery.html">Gallery</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="contact.html">Contact</a>
+                    </li>
+
+
+                </ul>
             </div>
         </div>
-        }
+    </nav>
+
+    <div class="row">
+        <div class="col-sm-1"></div>
+        <div class="col-sm-9 para">
+            <h1>About Me</h1>
+
+            <img src="https://scontent-atl3-1.xx.fbcdn.net/v/t31.0-8/12080073_10201029481575671_8474241659443345616_o.jpg?_nc_cat=104&_nc_oc=AQmCFmEiVnbCXj2TAUzq4I7o4dlEC8UQxbZgd1EmUjBwX1j_EV5R6E7owT0NBcA2tJKtK0PKuFvnhD_nRznjPTrt&_nc_ht=scontent-atl3-1.xx&oh=6a78633e50071652a63a0b743e1b9bc0&oe=5D8C2A5F"
+                class="auth-image" alt="Your Name">
+
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam vestibulum luctus felis, ac rhoncus nunc
+                porttitor condimentum. Mauris sit amet dolor eu elit varius varius facilisis id arcu. Proin vel dui
+                massa. Nunc rhoncus fringilla pharetra. Vestibulum bibendum consectetur euismod. Proin commodo purus
+                vitae sollicitudin consectetur.</p>
+
+            <p>Donec vehicula lacus at leo feugiat lacinia. In et ex ultrices, ultrices neque non, pretium odio. Nunc id
+                eros iaculis, pulvinar quam eget, egestas mauris.</p>
+
+            <p>Suspendisse dictum, arcu at convallis faucibus, quam sapien tincidunt nunc, sit amet egestas nibh tortor
+                et mi. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
+            <div class="col-sm-3"></div>
+        </div>
     </div>
+    </div>
+    <footer class="fixed-bottom">
+        <div class="container">
+            Copyright &copy;
+        </div>
+    </footer>
 </body>
 
 </html>
