--- a/gallery.html
+++ b/gallery.html
@@ -52,7 +52,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="about.html">About</a>
+                        <a class="nav-link" href="index.html">About</a>
                     </li>
                     <li class="nav-item active">
                         <a class="nav-link" href="#">Gallery <span class="sr-only">(current)</span></a>
