added the crystal link in the gallery section

--- a/gallery.html
+++ b/gallery.html
@@ -84,12 +84,12 @@
                     </div>
                 </div>
                 <div class="col-md-4">
-                    <div class="card">
-                        <img class="card-img-top" src="assets/images/technics-q-c-640-480-2.jpg">
+                    <a href="https://shahriar998.github.io/unit-4-game/"><div class="card">
+                        <img class="card-img-top" src="https://www.sideshow.com/storage/product-images/903428/infinity-gauntlet_marvel_gallery_5c4cce4febba6.jpg">
                         <div class="card-body" style="background-color: #5e7f7e">
-                            <h4>RPG Game</h4>
+                            <h4>Crystal Collector</h4>
                         </div>
-                    </div>
+                    </div></a>
                 </div>
                 <div class="col-md-4">
                     <div class="card">
