added trivia game link in the portfolio

--- a/index.html
+++ b/index.html
@@ -18,16 +18,26 @@
     <style>
         .auth-image {
             float: left;
-            width: 200px;
+            width: 30%;
             height: auto;
             margin-top: 10px;
             margin-right: 25px;
         }
 
+        .container{
+            width: 100%;
+            background-color: gray;
+            height: 20px;
+            margin:0;
+            box-sizing: border-box;
+
+        }
         html body {
             height: 100%;
             margin: 0;
             position: absolute;
+            font-size: 24px;
+            line-height: 200%;
         }
 
         .main-section {
@@ -40,7 +50,7 @@
 
             padding: 30px 0;
             clear: both;
-            font-size: 12px;
+            font-size: 24px;
             color: #fff;
             color: #ccc;
             text-align: center;
@@ -52,7 +62,15 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
+    <div class="container">
+        <div class="row">
+            <div class="col">
+
+            </div>
+        </div>
+
+    </div>
+    <!-- <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">Shahriar Elias</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
@@ -75,7 +93,7 @@
                 </ul>
             </div>
         </div>
-    </nav>
+    </nav> -->
 
     <div class="row">
         <div class="col-sm-1"></div>
@@ -85,16 +103,11 @@
             <img src="https://scontent-atl3-1.xx.fbcdn.net/v/t31.0-8/12080073_10201029481575671_8474241659443345616_o.jpg?_nc_cat=104&_nc_oc=AQmCFmEiVnbCXj2TAUzq4I7o4dlEC8UQxbZgd1EmUjBwX1j_EV5R6E7owT0NBcA2tJKtK0PKuFvnhD_nRznjPTrt&_nc_ht=scontent-atl3-1.xx&oh=6a78633e50071652a63a0b743e1b9bc0&oe=5D8C2A5F"
                 class="auth-image" alt="Your Name">
 
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam vestibulum luctus felis, ac rhoncus nunc
-                porttitor condimentum. Mauris sit amet dolor eu elit varius varius facilisis id arcu. Proin vel dui
-                massa. Nunc rhoncus fringilla pharetra. Vestibulum bibendum consectetur euismod. Proin commodo purus
-                vitae sollicitudin consectetur.</p>
+            <p>I'm Shahriar Bin Elias. I currently reside in Atlanta, Georgia and persuing my full stack development course in Georgia Tech</p>
 
-            <p>Donec vehicula lacus at leo feugiat lacinia. In et ex ultrices, ultrices neque non, pretium odio. Nunc id
-                eros iaculis, pulvinar quam eget, egestas mauris.</p>
+            <p>Currently I'm working in Macy's Tech as a Test Analyst. On daily basis I write automation script and do validation based on stories that are provided to me.</p>
 
-            <p>Suspendisse dictum, arcu at convallis faucibus, quam sapien tincidunt nunc, sit amet egestas nibh tortor
-                et mi. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
+            <p>Fun fact about me I love playing table tennis, like to explore new places and very much fond of driving to anywhere round the world if possible. But due to full stack development course I'll be holding down most of the fun since I want to give my full concentration to this course and graduate successfully and complete the programe.</p>
             <div class="col-sm-3"></div>
         </div>
     </div>
