--- a/gallery.html
+++ b/gallery.html
@@ -92,8 +92,8 @@
                     </div></a>
                 </div>
                 <div class="col-md-4">
-                    <div class="card">
-                        <img class="card-img-top" src="assets/images/technics-q-c-640-480-5.jpg">
+                    <a href="https://shahriar998.github.io/TriviaGame/."><div class="card">
+                        <img height= 296px; class="card-img-top" src="https://data.whicdn.com/images/171178954/original.gif">
                         <div class="card-body" style="background-color: #5e7f7e">
                             <h4>Trivia Game</h4>
                         </div>
