fixed the nav bar in the index page

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         </div>
 
     </div>
-    <!-- <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">Shahriar Elias</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
@@ -93,7 +93,7 @@
                 </ul>
             </div>
         </div>
-    </nav> -->
+    </nav>
 
     <div class="row">
         <div class="col-sm-1"></div>
