added giphy api to the portfolio

--- a/gallery.html
+++ b/gallery.html
@@ -18,9 +18,10 @@
             margin: 0;
             position: absolute;
         }
-        .main-section{
+
+        .main-section {
             margin-left: 20px;
-            margin-right:20px;
+            margin-right: 20px;
             height: 60px;
         }
 
@@ -84,20 +85,25 @@
                     </div>
                 </div>
                 <div class="col-md-4">
-                    <a href="https://shahriar998.github.io/unit-4-game/"><div class="card">
-                        <img class="card-img-top" src="https://www.sideshow.com/storage/product-images/903428/infinity-gauntlet_marvel_gallery_5c4cce4febba6.jpg">
-                        <div class="card-body" style="background-color: #5e7f7e">
-                            <h4>Crystal Collector</h4>
+                    <a href="https://shahriar998.github.io/unit-4-game/">
+                        <div class="card">
+                            <img class="card-img-top"
+                                src="https://www.sideshow.com/storage/product-images/903428/infinity-gauntlet_marvel_gallery_5c4cce4febba6.jpg">
+                            <div class="card-body" style="background-color: #5e7f7e">
+                                <h4>Crystal Collector</h4>
+                            </div>
                         </div>
-                    </div></a>
+                    </a>
                 </div>
                 <div class="col-md-4">
-                    <a href="https://shahriar998.github.io/TriviaGame/."><div class="card">
-                        <img height= 296px; class="card-img-top" src="https://data.whicdn.com/images/171178954/original.gif">
-                        <div class="card-body" style="background-color: #5e7f7e">
-                            <h4>Trivia Game</h4>
+                    <a href="https://shahriar998.github.io/TriviaGame/.">
+                        <div class="card">
+                            <img height=296px; class="card-img-top"
+                                src="https://data.whicdn.com/images/171178954/original.gif">
+                            <div class="card-body" style="background-color: #5e7f7e">
+                                <h4>Trivia Game</h4>
+                            </div>
                         </div>
-                    </div>
                 </div>
             </div>
         </div>
@@ -106,29 +112,24 @@
                 <div class="col-md-2 mb-5"></div>
                 <div class="col-md-4 mb-5">
                     <div class="card">
-                        <img class="card-img-top" src="assets/images/technics-q-c-640-480-7.jpg">
-                        <div class="card-body" style="background-color: #5e7f7e">
-                            <h4>Word Guess</h4>
-                        </div>
+                        <a href="https://shahriar998.github.io/GIPHY-API/.">
+                            <div class="card">
+                                <img class="card-img-top" src="assets/images/technics-q-c-640-480-7.jpg">
+                                <div class="card-body" style="background-color: #5e7f7e">
+                                    <h4>Giphy API Search</h4>
+                                </div>
+                            </div>
                     </div>
+                    
                 </div>
-                <div class="col-md-4">
-                    <div class="card">
-                        <img class="card-img-top" src="assets/images/technics-q-c-640-480-9.jpg">
-                        <div class="card-body" style="background-color: #5e7f7e">
-                            <h4>Rock Paper Scissors</h4>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-2"></div>
             </div>
         </div>
-    </div>
-    <footer class="fixed-bottom">
-        <div class="container">
-            Copyright &copy;
-        </div>
-    </footer>
+        
+        <footer class="fixed-bottom">
+            <div class="container">
+                Copyright &copy;
+            </div>
+        </footer>
 
 </body>
 
