attched train-schedule in the gallery section

--- a/gallery.html
+++ b/gallery.html
@@ -77,10 +77,11 @@
         <div class="container-fluid padding">
             <div class="row padding">
                 <div class="col-md-4">
+                    <a href="https://shahriar998.github.io/Train-Scheduler/.">
                     <div class="card">
-                        <img class="card-img-top" src="assets/images/technics-q-c-640-480-1.jpg">
+                        <img class="card-img-top" src="https://media.tenor.com/images/1dd07ff0f5fa604961f62c03af42fbde/tenor.gif">
                         <div class="card-body" style="background-color: #5e7f7e">
-                            <h4>Word Guess</h4>
+                            <h4>Train-Scheduler</h4>
                         </div>
                     </div>
                 </div>
